Added linear gradient

--- a/public/album.html
+++ b/public/album.html
@@ -52,6 +52,11 @@
               <td> Magenta </td>
               <td> X:XX </td>
             </tr>
+            <tr>
+              <td> 6 </td>
+              <td> Fuschia </td>
+              <td> X:XX </td>
+            </tr>
           </table>
         </div>
 
