Added an angular player-bar

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
           </a>
         </div>
           <ul class="nav navbar-nav navbar-right">
-            <li><a ur-sref='collection'>Library</a></li>
+            <li><a ui-sref='collection'>Library</a></li>
           </ul>
       </div>
     </nav>
